Sat Jul 31 13:37:51 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (is_defined): avoid unnecessary method invocations.

Sat Jul 31 05:35:37 2004  why the lucky stiff  <why@ruby-lang.org>

	* lib/yaml/rubytypes.rb: exceptions were using an older
	  YAML.object_maker. [ruby-core:03080]

	* ext/syck/token.c (sycklex_yaml_utf8): using newline_len to
	  handline CR-LFs.  "\000" was showing up on folded blocks which
	  stopped at EOF.

Sat Jul 31 01:25:11 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (is_defined): call is_defined() before invoking
	  rb_eval().  [ruby-talk:107867]

Fri Jul 30 16:10:54 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (lib_fromUTF8_core): raise ArgumentError when
	  the unknown encoding name is given.

	* ext/tcltklib/tcltklib.c (lib_toUTF8_core): ditto.

	* ext/tk/lib/tk.rb (Tk::Encoding.encoding_convertfrom): bug fix.

	* ext/tk/lib/tk.rb (Tk::Encoding.encoding_convertto): ditto.

Wed Jul 28 18:59:17 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi.rb (CGI::initialize): remove at_exit code for CGI_PARAMS
	  and CGI_COOKIES.  they will no longer be used.

Wed Jul 28 15:44:08 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_call0): should call rb_call_super() directly for
	  visibility overriding.  [ruby-dev:23989]

Wed Jul 28 01:04:44 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* env.h: remove argv from ruby_frame.

	* eval.c (rb_eval): no more copy on write.

	* eval.c (assign): ditto.

	* eval.c (rb_call0): can receive *rest by specifying negative
	  argc.  (-1 means 0 arg and *rest, -2 means 1 arg and *rest...)

	* eval.c (rb_call0): properly set frame's argc counter.

	* gc.c (rb_gc_mark_frame): need not to mark frame's argv

	* gc.c (run_final): wrong order of data. [ruby-dev:23984]

Tue Jul 27 07:05:04 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): copy on write for argument local variable
	  assignment.

	* eval.c (assign): ditto.
